# drt-ops-mvp

./: .gitignore  README.md  pom.xml
.superpowers/sdd/: progress.md  task-1-amap-config-report.md  task-2-amap-web-service-report.md  task-3-service-area-report.md  task-5-brief.md  task-5-report.md  task-6-report.md  task-7-brief.md  task-7-report.md
apps/admin-web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/admin-web/e2e/: auth-rbac.spec.ts  dispatch-flow.spec.ts  vehicle-location-flow.spec.ts
apps/admin-web/scripts/: run-e2e.mjs
apps/admin-web/src/: App.vue
apps/algorithm/: README.md  pyproject.toml
apps/algorithm/src/drt_algorithm/: __init__.py  explanations.py  insertion.py  main.py  matching.py  schemas.py  scoring.py
apps/algorithm/tests/: test_dispatch_evaluation.py  test_health.py
apps/api/: pom.xml
docs/api/: dispatch-algorithm-contract.md
docs/pilot/: tongwei-amap-virtual-stop-readiness.md  tongwei-map-and-stop-acceptance-record.md  tongwei-map-quota-checklist.md  tongwei-virtual-stop-collection-guide.md
docs/release/: internal-acceptance-2026-07-13.md  mvp-readiness-checklist.md  tongwei-vehicle-location-runbook.md  vehicle-location-acceptance-2026-07.md
docs/superpowers/plans/: 2026-07-08-dynamic-responsive-bus-ops-implementation.md  2026-07-10-manual-review-queue.md  2026-07-11-enterprise-auth-rbac-implementation.md  2026-07-13-operations-dashboard-metric-format.md  2026-07-13-task-operation-chain-investigation-plan.md  (+6 more)
infra/: docker-compose.yml
(+300 files in other folders)
