[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "drt-algorithm"
version = "0.1.0"
description = "Dynamic responsive transit dispatch algorithm service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "starlette>=0.46.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/drt_algorithm"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
